--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>tm470-app</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
